--- a/404.html
+++ b/404.html
@@ -1,17 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
 
-
-<h ead>
+<head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="refresh" content="0; url=/" />
     <title>Redirecting...</title>
-    </head>
+</head>
 
-    <body>
-
-        <p>
-    </body>
+<body>
+    <p>Redirecting...</p>
+</body>
 
 </html>
